# Respectful_Racoons

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  CREATING_MODULES.md  LICENSE  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: lint.yaml
docs/: astro.config.mjs  deploy.sh  package.json
docs/public/: index.css
docs/src/: config.ts
docs/src/components/: ArticleFooter.astro  DocSidebar.tsx  EditOnGithub.tsx
docs/src/layouts/: Main.astro
docs/src/pages/: all-modules-screen.md  getting-around.md  index.md  settings-toml.md  the-main-screen.md
docs/src/pages/modules/: contributing-modules.md  data-settings.md  index.md  keystrokes.md  today-card-display.md  update-destroy.md
functions/: README.md
functions/respectful-racoons/: main.py
trash_dash/: __init__.py  all_modules.py  body.py  cards.py  data.py  date_time_section.py  events.py  main_screen.py  module.py  screen.py  settings.py
trash_dash/data/: .gitignore
trash_dash/modules/: __init__.py  covid.py  example.py  hacker_news.py  news.py  today.py  todo.py  wakatime.py  weather.py
