[tool.poetry]
name = "respectful_racoons"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.6b0"
rich = "^10.5.0"
blessed = "^1.18.1"
toml = "^0.10.2"
types-toml = "^0.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.2"
pre-commit = "^2.13.0"
flake8-annotations = "^2.6.2"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.0.0"
pylint = "^2.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
